- [Bugfix] Failure parsing expiration from cached temporary credentials in AWS CLI configuration from AWS SSO (S3) (#15257)
- [Bugfix] Unable to authenticate with S3 (Credentials from AWS Command Line Interface) connection profile (S3) (#15222)
- [Bugfix] Refreshed OAuth tokens not saved in credentials manager (Dropbox, Google Drive, Google Storage, Microsoft OneDrive, SharePoint) (#15309)

8.7.0
- [Feature] SMB (Server Message Block) protocol support (#5368)
- [Feature] Support to login using temporary credentials from Security Token Service (STS API) using OpenID Connect (OIDC) web identity (S3) (#13804)
- [Feature] Login using connection profile for AWS S3/STS + Google (OIDC) (S3)
- [Feature] Login using connection profile for AWS S3/STS + Azure AD (OIDC) (S3)
- [Feature] Support login using OAuth 2.0 in (ownCloud) (#14876)
- [Feature] Allow to create internal share (ownCloud, Nextcloud) (#14197)
- [Feature] Option to automatically download and install updates (macOS)
- [Feature] Set creation date for uploaded files (Backblaze B2, Box, Google Drive)
- [Bugfix] Refresh temporary access credentials obtained from CLI configuration (S3) (#10917)
- [Bugfix] Cannot reuse nonce for GCM encryption uploading small files (Cryptomator)

8.6.3
- [Bugfix] Failure configuring credentials from AWS CLI setup (S3) (#14970)
- [Bugfix] Frequent broken pipe errors (FTP) (#14969)

8.6.2
- [Feature] Allow to open connections without copying authentication code after login (Microsoft OneDrive, SharePoint)
- [Bugfix] Segmented downloads with multiple connections per file causes transfers to fail (#13374)
- [Bugfix] Use recommended part size from authorization response for large file uploads (Backblaze B2) (#14856)
- [Bugfix] Skip determining if directory only contains hidden files (Backblaze B2) (#14775)
- [Bugfix] Does not show folders by default that do not contain a .bzEmpty placeolder file (Backblaze B2) (#14768)