@@ -106,6 +106,12 @@
         (Dropbox, Google Drive, Google Storage, Microsoft OneDrive, SharePoint) (<a
                 target="_blank" href="https://trac.cyberduck.io/ticket/15309">#15309</a>)
     </li>
+    <li><span class="label label-warning">Bugfix</span> Failure saving OpenID Connect (OIDC) token in credentials
+        manager (Windows)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Failure completing OAuth authentication flow (Dropbox, Microsoft
+        OneDrive, SharePoint) (Windows Store)
+    </li>
 </ul>
 
 <p>
